// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification Snapshots tests should match snapshot 1`] = `
<body>
  <div>
    <div
      class="component component"
      data-test-id="test-id-component"
      title="title"
    >
      <div
        class="wrapper"
      >
        <div
          class="contentWrapper"
        >
          <div
            class="leftAddons"
          >
            <div
              class="component size-24 component positive-checkmark"
              data-test-id="test-id-badge"
            >
              <svg
                fill="currentColor"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M17.108 9.473l-6.718 6.719-3.89-3.89 1.414-1.414 2.476 2.475 5.303-5.304 1.415 1.414z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            class="content"
          >
            <div
              class="contentTitle"
            >
              <div
                class="title title"
              >
                title
              </div>
              <div
                class="children"
              >
                text
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Notification Snapshots tests should match snapshot with leftAddons 1`] = `
<body>
  <div>
    <div
      class="component component"
    >
      <div
        class="wrapper"
      >
        <div
          class="contentWrapper"
        >
          <div
            class="leftAddons"
          >
            <div>
              leftAddons
            </div>
          </div>
          <div
            class="content"
          >
            <div
              class="contentTitle"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Notification Snapshots tests should match snapshot without icon 1`] = `
<body>
  <div>
    <div
      class="component component"
      title="title"
    >
      <div
        class="wrapper"
      >
        <div
          class="contentWrapper"
        >
          <div
            class="content"
          >
            <div
              class="contentTitle"
            >
              <div
                class="title title"
              >
                title
              </div>
              <div
                class="children"
              >
                text
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
